<resources>
    <string name="app_name">Clinica Dental</string>
    <string name="crearcuenta">Crear cuenta</string>
    <string name="subirfoto">Agregar Foto</string>
    <string name="nombre">Nombre</string>
    <string name="apellidop">Apellido Paterno</string>
    <string name="apellidom">Apellido Materno</string>
    <string name="telefono">Teléfono</string>
    <string name="correo">Correo</string>
    <string name="direccion">Dirección</string>
    <string name="contrasena">Contraseña</string>
    <string name="repetircontra">Repetir contraseña</string>
    <string name="descripcionimagen">Descripcion</string>
    <string name="login">Login</string>
    <string name="password">Contraseña</string>
    <string name="iniciar">Iniciar Sesión</string>
    <string name="aunnotienes">¿Aún no tienes cuenta?</string>
    <string name="creaaqui">Crea cuenta aqui</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anadirtratamiento">Agregar Tratamiento</string>
    <string name="tipo">Tipo</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripción</string>
    <string name="buscar">Buscar</string>
    <string name="eliminarcita">Eliminar cita</string>
    <string name="fecha">Fecha</string>
    <string name="hora">Hora</string>
    <string name="datoscita">Datos de la cita</string>
    <string name="eliminausuarios">Eliminar usuario</string>
    <string name="datosusuario">Datos paciente</string>
    <string name="eliminacuenta">Eliminar cuenta</string>
    <string name="mensajebienvenida">Bienvenido</string>
    <string name="menu_micuenta">Mi cuenta</string>
    <string name="cerrarsesion">Cerrar Sesión</string>
    <string name="guardarcambios">Modificar</string>
    <string name="modificartratamiento">Modificar Tratamiento</string>
    <string name="datosTratamient">Datos Tratamiento</string>
    <string name="guardarc">Guardar</string>
    <string name="modifusuarios">Modificar pacientes</string>
    <string name="realizarcita">Realizar Cita</string>
    <string name="datospersona">Datos Personales</string>
    <string name="ubicacion">ClinicaDental</string>
    <string name="nav_header_desc">nav</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="seleccione">Seleccione</string>

    <string name="menu_home">Home</string>

    <string name="menu_mispedidos">Mis pedidos</string>
    <string name="menu">Menu</string>
    <string name="menu_ubicacion">Ubicacion</string>
    <string name="menu_usuarios">Usuarios</string>

    <string name="agregarusuarios">Agregar usuarios</string>

    <string name="consultausuarios">Consulta de usuarios</string>
    <string name="listausuarios">Lista usuarios</string>

    <string name="listareservaciones">Lista citas</string>

    <string name="eliminaplatillo">Eliminar tratamimento</string>
    <string name="modificarplatillo">Modificar tratamiento</string>

    <string name="realizarreservacion">Realizar cita</string>

    <string name="datosreservacion">Datos de tu cita</string>

    <string name="numpersonas">Numero de personas</string>
    <string name="nummesas">Numero de mesas</string>

    <!--Eliminar reservacion-->
    <string name="eliminarreservacion">Eliminar cita</string>
    <string name="anadirplatillo">Añadir tratamiento</string>

    <!--Recuperacion de contraseña-->
    <string name="recuperac">Recuperacion de contraseña</string>
    <string name="envicarcorreo">Enviar correo de recuperacion</string>



</resources>