<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".micuenta">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_margin="25dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:text="@string/menu_micuenta"
                android:textColor="#1146CD"
                android:textSize="30sp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:id="@+id/ivMCImagen"
                android:layout_width="152dp"
                android:layout_height="138dp"
                android:src="@drawable/icono_usuario"></ImageView>

            <Button
                android:id="@+id/btnMCSubirFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E91E63"
                android:text="@string/subirfoto"></Button>

            <EditText
                android:id="@+id/etMCNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:maxLength="20">
            </EditText>

            <EditText
                android:id="@+id/etMCApellidoP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidop"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:maxLength="20">
            </EditText>

            <EditText
                android:id="@+id/etMCApellidoM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidom"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:maxLength="20">
            </EditText>

            <EditText
                android:id="@+id/etMCTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:inputType="number"
                android:layout_marginBottom="10dp"
                android:maxLength="10">
            </EditText>

            <EditText
                android:id="@+id/etMCDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                android:maxLength="50">
            </EditText>

            <EditText
                android:id="@+id/etMCContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp">
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_marginTop="5dp">

                <Button
                    android:id="@+id/btnCerrarSesion"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#8BC34A"
                    android:text="@string/cerrarsesion"
                    android:textSize="10sp"></Button>

                <Button
                    android:id="@+id/btnMCEliminarC"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#EF3645"
                    android:text="@string/eliminacuenta"
                    android:textSize="10sp"></Button>

                <Button
                    android:id="@+id/btnMCModificarC"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#03A9F4"
                    android:text="@string/guardarcambios"
                    android:textSize="10sp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>