<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modificarpaciente">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/modifusuarios"
                android:textColor="#1146CD"
                android:textSize="30sp"
                android:textStyle="bold"></TextView>

            <ImageView
                android:id="@+id/ivMImagen"
                android:layout_width="148dp"
                android:layout_height="108dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/icono_usuario"></ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:gravity="center">

                <EditText
                    android:id="@+id/etMCorreo"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:layout_marginEnd="15dp"
                    android:maxLength="30">
                </EditText>

                <Button
                    android:id="@+id/btnMBuscarCorreo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#8BC34A"
                    android:text="@string/buscar"
                    android:textSize="10dp"></Button>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datosusuario"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:id="@+id/etMNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:maxLength="20">
            </EditText>

            <EditText
                android:id="@+id/etMApellidoP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidop"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:maxLength="20">
            </EditText>

            <EditText
                android:id="@+id/etMApellidoM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidom"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:maxLength="20">
            </EditText>

            <EditText
                android:id="@+id/etMTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:inputType="number"
                android:layout_marginBottom="10dp"
                android:maxLength="10">
            </EditText>

            <EditText
                android:id="@+id/etMDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                android:maxLength="50">
            </EditText>

            <EditText
                android:id="@+id/etMContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp">
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_marginBottom="50dp">

                <Button
                    android:id="@+id/btnMSubirFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="#E91E63"
                    android:text="@string/subirfoto"></Button>

                <Button
                    android:id="@+id/btnModifUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#2196F3"
                    android:text="@string/guardarc"></Button>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</FrameLayout>