<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".agregaru">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="25dp"
            android:gravity="center">

            <TextView
                android:id="@+id/tvACrear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/crearcuenta"
                android:textStyle="bold"
                android:gravity="center"
                android:textSize="30dp"
                android:layout_marginBottom="20dp"
                android:textColor="#1146CD">
            </TextView>

            <ImageView
                android:id="@+id/ivAImagen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icono_usuario"></ImageView>

            <Button
                android:id="@+id/btnASubirFoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subirfoto"
                android:backgroundTint="#E91E63">
            </Button>


            <EditText
                android:id="@+id/etANombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:maxLength="20">
            </EditText>

            <EditText
                android:id="@+id/etAApellidoP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidop"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:maxLength="20">
            </EditText>

            <EditText
                android:id="@+id/etAApellidoM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidom"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:maxLength="20">
            </EditText>

            <EditText
                android:id="@+id/etATelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:inputType="number"
                android:layout_marginBottom="10dp"
                android:maxLength="10">
            </EditText>

            <EditText
                android:id="@+id/etACorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"
                android:layout_marginBottom="10dp"
                android:maxLength="30">
            </EditText>

            <EditText
                android:id="@+id/etADireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                android:maxLength="30">
            </EditText>

            <EditText
                android:id="@+id/etAContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp">
            </EditText>

            <EditText
                android:id="@+id/etARContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/repetircontra"
                android:inputType="textPassword"
                android:layout_marginBottom="20dp">
            </EditText>

            <Button
                android:id="@+id/btnAgregarUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crearcuenta"
                android:backgroundTint="#8BC34A"
                android:layout_marginBottom="50dp">
            </Button>

        </LinearLayout>

    </ScrollView>


</FrameLayout>