<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.modificarusuarios.ModificarUFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="25dp"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/modifusuarios"
                android:gravity="center"
                android:textColor="@color/blue"
                android:textStyle="bold"
                android:textSize="30sp">
            </TextView>

            <ImageView
                android:id="@+id/ivMImagen"
                android:layout_width="180dp"
                android:layout_height="180dp"
                android:src="@drawable/icono_usuario"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp">
            </ImageView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:gravity="center">

                <EditText
                    android:id="@+id/etMCorreo"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/correo"
                    android:inputType="textEmailAddress"
                    android:layout_marginEnd="15dp"
                    android:maxLength="30">
                </EditText>

                <Button
                    android:id="@+id/btnMBuscarCorreo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buscar"
                    android:backgroundTint="@color/lightblue"
                    android:textSize="10dp">
                </Button>

            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datosusuario"
                android:gravity="center"
                android:textStyle="bold"
                android:textSize="20sp">
            </TextView>

            <EditText
                android:id="@+id/etMNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:hint="@string/nombre"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:maxLength="20">
            </EditText>

            <EditText
                android:id="@+id/etMApellidoP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidop"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:maxLength="20">
            </EditText>

            <EditText
                android:id="@+id/etMApellidoM"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/apellidom"
                android:inputType="textPersonName"
                android:layout_marginBottom="10dp"
                android:maxLength="20">
            </EditText>

            <EditText
                android:id="@+id/etMTelefono"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                android:inputType="number"
                android:layout_marginBottom="10dp"
                android:maxLength="10">
            </EditText>

            <EditText
                android:id="@+id/etMDireccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/direccion"
                android:inputType="text"
                android:layout_marginBottom="10dp"
                android:maxLength="50">
            </EditText>

            <EditText
                android:id="@+id/etMContra"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/contrasena"
                android:inputType="textPassword"
                android:layout_marginBottom="10dp">
            </EditText>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:layout_marginBottom="50dp">

                <Button
                    android:id="@+id/btnMSubirFoto"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/subirfoto"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/lightblue">
                </Button>

                <Button
                    android:id="@+id/btnModifUsuario"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/guardarc"
                    android:backgroundTint="@color/blue">
                </Button>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>