<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="170dp"
                android:layout_height="190dp"
                android:layout_gravity="center"
                android:contentDescription="@string/descripcionimagen"
                app:srcCompat="@drawable/logo"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/recuperac"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/etRCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:hint="@string/correo"
                android:inputType="textEmailAddress"/>

            <Button
                android:id="@+id/btnEnviarCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/envicarcorreo"
                android:backgroundTint="@color/blue"
                app:cornerRadius="20dp"/>

        </LinearLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>